Bid-history page continue

--- a/frontend/bid-history.html
+++ b/frontend/bid-history.html
@@ -106,13 +106,11 @@
         </ul>
     </aside>
     <main class="app-content">
-        <div class="d-flex justify-content-around ">
-            <div class="d-flex justify-content-end flex-column ">
-            </div>
-            <div class="d-flex justify-content-end flex-column ">
-                <img src="assets/images/dashboard_coin.webp" style="height: 80px;width: 100px;" alt="">
-            </div>
-            <div class="d-flex justify-content-end flex-column ">
+        <div class="transaction_list_top_section d-flex justify-content-around align-items-center ">
+            <img src="./assets/images/bid_history_top.png" alt="">
+            <div>
+                <p>Total Bidding Amount</p>
+                <h3></h3>
             </div>
         </div>
         <div class="transaction_main_container">
