Bid history page completed

--- a/frontend/bid-history.html
+++ b/frontend/bid-history.html
@@ -110,7 +110,7 @@
             <img src="./assets/images/bid_history_top.png" alt="">
             <div>
                 <p>Total Bidding Amount</p>
-                <h3></h3>
+                <p class="money">₹100</p>
             </div>
         </div>
         <div class="transaction_main_container">
@@ -118,7 +118,7 @@
             <div class="transaction_content_container">
                 <div class="transaction_card">
                     <div class="transaction_avatar_div">
-                        <!-- <img src="..." alt="Avatar" class="avatar"> -->
+                        <i class="fa fa-minus" aria-hidden="true"></i>
                     </div>
                     <div
                         style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
@@ -135,7 +135,7 @@
                 </div>
                 <div class="transaction_card">
                     <div class="transaction_avatar_div">
-                        <!-- <img src="..." alt="Avatar" class="avatar"> -->
+                        <i class="fa fa-minus" aria-hidden="true"></i>
                     </div>
                     <div
                         style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
@@ -152,7 +152,7 @@
                 </div>
                 <div class="transaction_card">
                     <div class="transaction_avatar_div">
-                        <!-- <img src="..." alt="Avatar" class="avatar"> -->
+                        <i class="fa fa-minus" aria-hidden="true"></i>
                     </div>
                     <div
                         style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
@@ -169,7 +169,7 @@
                 </div>
                 <div class="transaction_card">
                     <div class="transaction_avatar_div">
-                        <!-- <img src="..." alt="Avatar" class="avatar"> -->
+                        <i class="fa fa-minus" aria-hidden="true"></i>
                     </div>
                     <div
                         style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
@@ -186,7 +186,7 @@
                 </div>
                 <div class="transaction_card">
                     <div class="transaction_avatar_div">
-                        <!-- <img src="..." alt="Avatar" class="avatar"> -->
+                        <i class="fa fa-minus" aria-hidden="true"></i>
                     </div>
                     <div
                         style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
