--- a/frontend/index.html
+++ b/frontend/index.html
@@ -103,7 +103,7 @@
             let username = document.getElementById('login_username').value
             let password = document.getElementById('login_password').value
             // TODO: remove gameApplication
-            axios.post('/matkaApplicaton/backend/login/',
+            axios.post('/backend/login/',
                 {
                     "username": username,
                     "password": password
