--- a/win-history.html
+++ b/win-history.html
@@ -20,11 +20,6 @@
 
 <body class="app sidebar-mini">
     <!-- NOTE: START: -->
-    <!-- Alert -->
-    <div class="myAlert-top alert alert-success" id="alert_div">
-        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-        Indicates a successful or positive action 123.
-    </div>
     <!-- loader -->
     <div class="overlay"></div>
     <div class="spanner">
@@ -56,7 +51,7 @@
             <a href="profile.html"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit Profile</a>
         </div>
         <ul class="app-menu">
-            <li><a class="app-menu__item" href="home.html"><i class="app-menu__icon fa fa-home"></i><span
+            <li><a class="app-menu__item " href="home.html"><i class="app-menu__icon fa fa-home"></i><span
                         class="app-menu__label">Home</span></a>
             </li>
             <li><a class="app-menu__item" href="game-rate.html"><i class="app-menu__icon fa  fa-inr"></i><span
@@ -81,7 +76,7 @@
                     </li>
                 </ul>
             </li>
-            <li><a class="app-menu__item" href="withdrawal.html"><i class="app-menu__icon fa fa-money"></i><span
+            <li><a class="app-menu__item " href="withdrawal.html"><i class="app-menu__icon fa fa-money"></i><span
                         class="app-menu__label">Withdrawal</span></a></li>
             <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i
                         class="app-menu__icon fa fa-handshake-o"></i><span class="app-menu__label">Help</span><i
@@ -106,21 +101,19 @@
         </ul>
     </aside>
     <main class="app-content">
-        <div class="d-flex justify-content-around ">
-            <div class="d-flex justify-content-end flex-column ">
+        <div class="transaction_list_top_section d-flex justify-content-around align-items-center ">
+            <div>
+                <p>Winning Amount</p>
+                <p class="money">₹100</p>
             </div>
-            <div class="d-flex justify-content-end flex-column ">
-                <img src="assets/images/dashboard_coin.webp" style="height: 80px;width: 100px;" alt="">
-            </div>
-            <div class="d-flex justify-content-end flex-column ">
-            </div>
+            <img src="./assets/images/winning_top.png" alt="">
         </div>
         <div class="transaction_main_container">
             <h4>Transaction Details</h4>
             <div class="transaction_content_container">
                 <div class="transaction_card">
-                    <div class="transaction_avatar_div">
-                        <!-- <img src="..." alt="Avatar" class="avatar"> -->
+                    <div class="transaction_avatar_div winning_avatar">
+                        <i class="fa fa-plus" aria-hidden="true"></i>
                     </div>
                     <div
                         style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
@@ -129,15 +122,15 @@
                             <small>20 Apr, 12:39 PM</small>
                         </div>
                         <div>
-                            <p class="float-right"><b>+ ₹256</b><img src="./assets/shapes/clarity_wallet-line.svg"
+                            <p class="float-right"><b>- ₹256</b><img src="./assets/shapes/clarity_wallet-line.svg"
                                     class="ml-1" height="14px" alt=""></p>
                             <p style="margin-top: -8px;font-size: 11px;font-weight: 500;">Balance : 654</p>
                         </div>
                     </div>
                 </div>
                 <div class="transaction_card">
-                    <div class="transaction_avatar_div">
-                        <!-- <img src="..." alt="Avatar" class="avatar"> -->
+                    <div class="transaction_avatar_div winning_avatar">
+                        <i class="fa fa-plus" aria-hidden="true"></i>
                     </div>
                     <div
                         style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
@@ -146,15 +139,15 @@
                             <small>20 Apr, 12:39 PM</small>
                         </div>
                         <div>
-                            <p class="float-right"><b>+ ₹256</b><img src="./assets/shapes/clarity_wallet-line.svg"
+                            <p class="float-right"><b>- ₹256</b><img src="./assets/shapes/clarity_wallet-line.svg"
                                     class="ml-1" height="14px" alt=""></p>
                             <p style="margin-top: -8px;font-size: 11px;font-weight: 500;">Balance : 654</p>
                         </div>
                     </div>
                 </div>
                 <div class="transaction_card">
-                    <div class="transaction_avatar_div">
-                        <!-- <img src="..." alt="Avatar" class="avatar"> -->
+                    <div class="transaction_avatar_div winning_avatar">
+                        <i class="fa fa-plus" aria-hidden="true"></i>
                     </div>
                     <div
                         style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
@@ -163,15 +156,15 @@
                             <small>20 Apr, 12:39 PM</small>
                         </div>
                         <div>
-                            <p class="float-right"><b>+ ₹256</b><img src="./assets/shapes/clarity_wallet-line.svg"
+                            <p class="float-right"><b>- ₹256</b><img src="./assets/shapes/clarity_wallet-line.svg"
                                     class="ml-1" height="14px" alt=""></p>
                             <p style="margin-top: -8px;font-size: 11px;font-weight: 500;">Balance : 654</p>
                         </div>
                     </div>
                 </div>
                 <div class="transaction_card">
-                    <div class="transaction_avatar_div">
-                        <!-- <img src="..." alt="Avatar" class="avatar"> -->
+                    <div class="transaction_avatar_div winning_avatar">
+                        <i class="fa fa-plus" aria-hidden="true"></i>
                     </div>
                     <div
                         style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
@@ -180,15 +173,15 @@
                             <small>20 Apr, 12:39 PM</small>
                         </div>
                         <div>
-                            <p class="float-right"><b>+ ₹256</b><img src="./assets/shapes/clarity_wallet-line.svg"
+                            <p class="float-right"><b>- ₹256</b><img src="./assets/shapes/clarity_wallet-line.svg"
                                     class="ml-1" height="14px" alt=""></p>
                             <p style="margin-top: -8px;font-size: 11px;font-weight: 500;">Balance : 654</p>
                         </div>
                     </div>
                 </div>
                 <div class="transaction_card">
-                    <div class="transaction_avatar_div">
-                        <!-- <img src="..." alt="Avatar" class="avatar"> -->
+                    <div class="transaction_avatar_div winning_avatar">
+                        <i class="fa fa-plus" aria-hidden="true"></i>
                     </div>
                     <div
                         style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
@@ -197,7 +190,7 @@
                             <small>20 Apr, 12:39 PM</small>
                         </div>
                         <div>
-                            <p class="float-right"><b>+ ₹256</b><img src="./assets/shapes/clarity_wallet-line.svg"
+                            <p class="float-right"><b>- ₹256</b><img src="./assets/shapes/clarity_wallet-line.svg"
                                     class="ml-1" height="14px" alt=""></p>
                             <p style="margin-top: -8px;font-size: 11px;font-weight: 500;">Balance : 654</p>
                         </div>
@@ -220,8 +213,9 @@
             axios.get('/matkaApplicaton/backend/home/').then((response) => {
                 endLoader()
                 if (response.status === 200) {
+                    // showAlert('success', `status ${response.status}`)
                 } else {
-                    showAlert('danger', `status ${response.status}`)
+                    // showAlert('danger', `status ${response.status}`)
                 }
                 console.log(response)
             }, (error) => {
