--- a/withdrawal.html
+++ b/withdrawal.html
@@ -57,11 +57,11 @@
             <li><a class="app-menu__item" href="game-rate.html"><i class="app-menu__icon fa  fa-inr"></i><span
                         class="app-menu__label">Game Rate</span></a>
             </li>
-            <li class="treeview"><a class="app-menu__item active" href="#" data-toggle="treeview"><i
+            <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i
                         class="app-menu__icon fa fa-history"></i><span class="app-menu__label">History</span><i
                         class="treeview-indicator fa fa-angle-right"></i></a>
                 <ul class="treeview-menu">
-                    <li><a class="treeview-item active" href="bid-history.html"><i
+                    <li><a class="treeview-item" href="bid-history.html"><i
                                 class="icon fa fa-circle-o"></i>Bidding
                             History</a></li>
                     <li><a class="treeview-item" href="win-history.html"><i class="icon fa fa-circle-o"></i>Winning
@@ -76,7 +76,7 @@
                     </li>
                 </ul>
             </li>
-            <li><a class="app-menu__item" href="withdrawal.html"><i class="app-menu__icon fa fa-money"></i><span
+            <li><a class="app-menu__item active" href="withdrawal.html"><i class="app-menu__icon fa fa-money"></i><span
                         class="app-menu__label">Withdrawal</span></a></li>
             <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i
                         class="app-menu__icon fa fa-handshake-o"></i><span class="app-menu__label">Help</span><i
@@ -102,18 +102,18 @@
     </aside>
     <main class="app-content">
         <div class="transaction_list_top_section d-flex justify-content-around align-items-center ">
-            <img src="./assets/images/bid_history_top.png" alt="">
             <div>
                 <p>Total Bidding Amount</p>
                 <p class="money">₹100</p>
             </div>
+            <img src="./assets/images/withdrawal_top.png" alt="">
         </div>
         <div class="transaction_main_container">
             <h4>Transaction Details</h4>
             <div class="transaction_content_container">
                 <div class="transaction_card">
-                    <div class="transaction_avatar_div">
-                        <i class="fa fa-minus" aria-hidden="true"></i>
+                    <div class="transaction_avatar_div withdrawal_avatar">
+                        <i class="fa fa-plus" aria-hidden="true"></i>
                     </div>
                     <div
                         style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
@@ -129,8 +129,8 @@
                     </div>
                 </div>
                 <div class="transaction_card">
-                    <div class="transaction_avatar_div">
-                        <i class="fa fa-minus" aria-hidden="true"></i>
+                    <div class="transaction_avatar_div withdrawal_avatar">
+                        <i class="fa fa-plus" aria-hidden="true"></i>
                     </div>
                     <div
                         style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
@@ -146,8 +146,8 @@
                     </div>
                 </div>
                 <div class="transaction_card">
-                    <div class="transaction_avatar_div">
-                        <i class="fa fa-minus" aria-hidden="true"></i>
+                    <div class="transaction_avatar_div withdrawal_avatar">
+                        <i class="fa fa-plus" aria-hidden="true"></i>
                     </div>
                     <div
                         style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
@@ -163,8 +163,8 @@
                     </div>
                 </div>
                 <div class="transaction_card">
-                    <div class="transaction_avatar_div">
-                        <i class="fa fa-minus" aria-hidden="true"></i>
+                    <div class="transaction_avatar_div withdrawal_avatar">
+                        <i class="fa fa-plus" aria-hidden="true"></i>
                     </div>
                     <div
                         style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
@@ -180,8 +180,8 @@
                     </div>
                 </div>
                 <div class="transaction_card">
-                    <div class="transaction_avatar_div">
-                        <i class="fa fa-minus" aria-hidden="true"></i>
+                    <div class="transaction_avatar_div withdrawal_avatar">
+                        <i class="fa fa-plus" aria-hidden="true"></i>
                     </div>
                     <div
                         style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
