--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
             let username = document.getElementById('login_username').value
             let password = document.getElementById('login_password').value
             // TODO: remove gameApplication
-            axios.post('/backend/login/',
+            axios.post('/bettingApplication/backend/login/',
                 {
-                    "username": username,
+                    "phone_number": username,
                     "password": password
                 }
             ).then((response) => {
